# covered-eyes

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
app/: .eslintrc.js  .gitignore  App.jsx  README.md  app.json  babel.config.js  package.json
app/src/: app.jsx
app/src/components/: layer.jsx  navigation.jsx  safeRegions.jsx
app/src/data/: colors.js  presets.js
app/src/hooks/: citySkies.js
app/src/lib/: citySkies.js  dependency.js  kvstore.js
app/src/pages/: colors.jsx  connection.jsx  global.jsx  layer.jsx  presets.jsx  shards.jsx  stack.jsx
app/src/providers/: citySkies.jsx  colors.jsx  favoriteConnections.jsx  presets.jsx
example-shards/: all_vars.py  alpha_test_circle.py  alpha_test_rgb.py  artnet.py  bounce.py  diagonal.py  diamond.py  ellipse.py  fieldgen_sinusoids.py  game_of_life.py  gaussian.py  gpu_diagonal.py  gpu_diamond.py  gpu_ellipse.py  gpu_juliaset.py  gpu_noise.py  gpu_solid.py  gpu_straight.py  noise.py  randomcolor.py  randomcolorwalk.py  solid.py  starlings.py  straight.py  virtual_circle.py
src/: artnet.py  cache.py  framerate.py  main.py  pathutils.py  profiling.py  pysicgl_utils.py  run_window_config.py  semver.py  shard.py  snake.py  stack.py  stack_manager.py
src/api/: __init__.py  index.py
src/api/v0/: __init__.py  (+4 more)
src/audio_providers/: mock.py  stream_udp.py  stream_udp_mic.py
src/drivers/: artnet.py  udp.py
src/gpu/: __init__.py  window.py
src/hidden_shades/: __init__.py  artnet.py  frequency.py  globals.py  layer.py  timebase.py  timewarp.py
visualizer/: visualizer.pde
(+20 files in other folders)
