[project]
name = "covered-eyes"
authors = [
  {name = "oclyke", email = "oclyke@oclyke.dev"},
]
description = "composable renderer"

[project.urls]
Source = "https://github.com/oclyke/covered-eyes"

[tool.black]
include = '''
src\/.*\.pyi?$|
tests\/.*\.pyi?$|
examples\/.*\.pyi?$ |
example-shards\/.*\.pyi?$
'''
exclude = '''
venv\/.*\.pyi?$
'''
